added growperiods, small fixes

--- a/src/app/entities/plant-location/detail/plant-location-detail.component.html
+++ b/src/app/entities/plant-location/detail/plant-location-detail.component.html
@@ -5,7 +5,7 @@
         <h1>Location</h1>
         <span class="toolbar-spacer"></span>
         <button mat-icon-button class="btn" routerLink="/entities/plantlocations"><mat-icon>arrow_back</mat-icon></button>
-        <button mat-icon-button class="btn btn-primary" (click)="save()"><mat-icon>save</mat-icon></button>
+        <button mat-icon-button class="btn btn-primary" (click)="save(true)"><mat-icon>save</mat-icon></button>
       </mat-toolbar>
     </div>
 
