--- a/src/app/entities/plants/detail/plants-detail.component.html
+++ b/src/app/entities/plants/detail/plants-detail.component.html
@@ -11,7 +11,7 @@
                 [routerLink]="['/entities/producepickevents/new',{plant:item.id}]">
           <mat-icon>add_task</mat-icon>
         </button>
-        <button mat-icon-button class="btn btn-primary" title="save" (click)="save()">
+        <button mat-icon-button class="btn btn-primary" title="save" (click)="save(true)">
           <mat-icon>save</mat-icon>
         </button>
       </mat-toolbar>
