--- a/src/app/entities/plantspecies-type/list/plantspecies-type-list.component.html
+++ b/src/app/entities/plantspecies-type/list/plantspecies-type-list.component.html
@@ -35,7 +35,7 @@
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" pageSize="25"></mat-paginator>
       </div>
     </div>
   </div>
