--- a/src/app/entities/produce-pick-event/detail/produce-pick-event-detail.component.html
+++ b/src/app/entities/produce-pick-event/detail/produce-pick-event-detail.component.html
@@ -7,7 +7,7 @@
         <button mat-icon-button class="btn" routerLink="/entities/producepickevents">
           <mat-icon>arrow_back</mat-icon>
         </button>
-        <button mat-icon-button class="btn btn-primary" (click)="save()">
+        <button mat-icon-button class="btn btn-primary" (click)="save(true)">
           <mat-icon>save</mat-icon>
         </button>
       </mat-toolbar>
