--- a/src/app/entities/seed-package/list/seed-package-list.component.html
+++ b/src/app/entities/seed-package/list/seed-package-list.component.html
@@ -42,7 +42,6 @@
             <td mat-cell *matCellDef="let item"><a
               routerLink="/entities/plantspecies/{{item.plantSpecies.id}}">{{item.plantSpecies.name}}</a></td>
           </ng-container>
-          <!-- spacing column -->
           <ng-container matColumnDef="percentfull">
             <th mat-header-cell *matHeaderCellDef mat-sort-header> % full</th>
             <td mat-cell *matCellDef="let item"> {{item.percentFull}}%</td>
@@ -58,7 +57,7 @@
           <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
           <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
         </table>
-        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+        <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" pageSize="25"></mat-paginator>
       </div>
     </div>
   </div>
