--- a/src/app/entities/seed-package/detail/seed-package-detail.component.html
+++ b/src/app/entities/seed-package/detail/seed-package-detail.component.html
@@ -28,7 +28,9 @@
         </mat-form-field>
         <div>
           <mat-label>% Filled</mat-label>
-          <mat-slider [(ngModel)]="item.percentFull" thumbLabel [displayWith]="formatSliderLabel" min="0" max="100" step="5" ></mat-slider>
+          <mat-slider [(ngModel)]="item.percentFull" discrete [displayWith]="formatSliderLabel" min="0" max="100" step="5" >
+            <input matSliderThumb>
+          </mat-slider>
         </div>
         <mat-form-field appearance="fill">
           <mat-label>Plant species</mat-label>
