--- a/src/app/seed-package-block/seed-package-block.component.html
+++ b/src/app/seed-package-block/seed-package-block.component.html
@@ -10,7 +10,7 @@
     <mat-nav-list *ngFor="let entry of getItemsByTypeMap() | keyvalue">
       <h2 matSubheader>{{entry.key.name}}</h2>
       <mat-list-item *ngFor="let item of entry.value" routerLink="/entities/seedpackages/{{item.id}}">
-        <mat-icon mat-list-icon>article</mat-icon>
+        <mat-icon matListItemIcon>article</mat-icon>
         <div mat-line>{{item.description}}</div>
         <div mat-line> {{item.plantSpecies.name}}
           <mat-progress-bar mode="determinate" value="{{item.percentFull}}"></mat-progress-bar>
